[Core] [Fs] Replace `Path.of()` to `Paths.get()`